# example-receiver

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  main.cpp
docker/: Dockerfile.arm64  createArmDocker.sh  exportDepends.sh  exportLinks.sh  importDepends.sh  importLinks.sh
include/: codecorp.h  connection_lib.hpp  dispatcher_lib.hpp  generica_app_lib.hpp  helper_lib.hpp
src/: CMakeLists.txt  connection_lib.cpp  main.cpp
src/include/: blobApp_lib.hpp  codecorp.h  connection_lib.hpp  crdDefs.h  test_img_3DM.h
src/src/: connection_lib.cpp  helper_lib.cpp
tests/: getInfos.py  sendFrames.py  updateControl.py
